<resources>
    <string name="app_name">My Showcase</string>
    <string name="user_name">hasanzian</string>
    <string name="menu_search">Search</string>
    <string name="followers">434</string>
    <string name="followers_string">Followers</string>
    <string name="following_string">Following</string>
    <string name="following_nos">1024</string>
    <string name="profile_info_intro">Lorem ipsum dolor sit amet consectetur adipiscing elit</string>
    <string name="project_details">This Android Application is to educate women with the help of pregnancy and child health education videos</string>
    <string name="project_title">Lorem ipsum</string>
    <string name="project_image_desc">Project Image</string>
</resources>
