<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hasanzian.myshowcase.MainActivity"
    android:background="@color/colorPrimaryDark">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        android:id="@+id/card_profile">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/margin_left_16dp"
                >

                <TextView
                    android:id="@+id/user_name_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/user_name"
                    android:textColor="@color/mainHeadingColor"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/user_followers_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="bottom"
                            android:text="@string/followers"
                            android:textColor="@color/mainHeadingColor"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/user_followers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="top"
                            android:text="@string/followers_string"
                            android:textColor="@color/subHeadingColor"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/user_followings_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="bottom"
                            android:text="@string/following_nos"
                            android:textColor="@color/mainHeadingColor"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/user_followings"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/following_string"
                            android:textColor="@color/subHeadingColor"
                            android:textStyle="bold" />


                    </LinearLayout>


                </LinearLayout>


      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_top"
          android:fontFamily="@font/roboto_medium"
          android:textColor="@color/subHeadingColor"
          android:text="@string/profile_info_intro"
          android:layout_marginBottom="@dimen/margin_top"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:src="@drawable/user"
                    />
            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>


<ListView
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/card_profile"
    tools:listitem="@layout/list_item"
    android:divider="@null">

</ListView>













</RelativeLayout>
